fotos en todos los tours

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -73,23 +73,31 @@
                                         <h2>PRÓXIMOS CONCIERTOS</h2>
                                         <ul class="ulTour">
                                                 <h3>2025</h3>
-                                                <li class="listaTour">12 Marzo - Monterrey, MX -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
-                                                <li class="listaTour">14 Marzo - Merida, MX -> <a class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
-                                                <li class="listaTour">16 Marzo - Mexico City, MX -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
-                                                <li class="listaTour">10 abril - Londres, UK -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
-                                                <li class="listaTour">12 abril - París, Francia -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
-                                                <li class="listaTour">15 abril - Madrid, España -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live/">Tickets</a></li>
+                                                <div class="contenedorListaIMG">
+                                                        <figure>
+                                                                <img class="fotosTour"
+                                                                        src="../assets/img/keane-tour-2025.jpg"
+                                                                        alt="Foto del tour de Keane 2025 por Mexico">
+                                                        </figure>
+                                                        <div>
+                                                                <li class="listaTour">12 Marzo - Monterrey, MX -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live/">Tickets</a>
+                                                                </li>
+                                                                <li class="listaTour">14 Marzo - Merida, MX -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live/">Tickets</a>
+                                                                </li>
+                                                                <li class="listaTour">16 Marzo - Mexico City, MX -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live/">Tickets</a>
+                                                                </li>
+                                                                <li class="listaTour">18 Marzo - Irapuato, MX -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live/">Tickets</a>
+                                                                </li>
+                                                        </div>
+                                                </div>
                                         </ul>
                                 </article>
 
@@ -97,56 +105,81 @@
                                         <h2>CONCIERTOS PASADOS</h2>
                                         <ul class="ulTour">
                                                 <h3>2024</h3>
-                                                <li class="listaTour">23 Nov - Bogota, Colombia -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">21 Nov - Lima, Peru -> <a class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a></li>
-                                                <li class="listaTour">19 Nov - Santiago, Chile -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">16 Nov - Asuncion, Paraguay -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">14 Nov - Bs. As., Argentina -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
+                                                <div class="contenedorListaIMG">
+                                                        <div>
+                                                                <li class="listaTour">23 Nov. - Bogotá, Colombia -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">21 Nov. - Lima, Perú -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a></li>
+                                                                <li class="listaTour">19 Nov. - Santiago, Chile -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">16 Nov. - Asunción, Paraguay -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">14 Nov. - Bs. As., Argentina -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                        </div>
+                                                        <figure>
+                                                                <img class="fotosTour"
+                                                                        src="../assets/img/keane-tour-2024.jpg"
+                                                                        alt="Foto del tour de Keane 2014 por Latinoamérica">
+                                                        </figure>
+                                                </div>
                                         </ul>
 
                                         <ul class="ulTour" data-aos="fade-up" data-aos-duration="2000">
-                                                <h3>2023</h3>
-                                                <li class="listaTour">21 Sept - Lima, Peru -> <a class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a></li>
-                                                <li class="listaTour">19 Sept - Santiago, Chile -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">16 Sept - Asuncion, Paraguay -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">14 Sept - Bs. As., Argentina -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
-                                                <li class="listaTour">12 Sept - Montevideo, Uruguay -> <a
-                                                                class="botonListaTour"
-                                                                href="https://www.keanemusic.com/live-archive/">Ver
-                                                                Fotos</a>
-                                                </li>
+                                                <h3>2020</h3>
+                                                <div class="contenedorListaIMG">
+                                                        <figure>
+                                                                <img class="fotosTour"
+                                                                        src="../assets/img/keane-tour-2020.jpg"
+                                                                        alt="Foto del tour de Keane 2019 por Europa">
+                                                        </figure>
+                                                        <div>
+                                                                <li class="listaTour">29 Ene. - Toulouse, Francia -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a></li>
+                                                                <li class="listaTour">27 Ene. - Madrid, España -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">26 Ene. - Lisbon, Portugal -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">25 Ene. - Porto, Portugal -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">23 Ene. - Barcelona, España -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                                <li class="listaTour">21 Ene. - París, Francia -> <a
+                                                                                class="botonListaTour"
+                                                                                href="https://www.keanemusic.com/live-archive/">Ver
+                                                                                Fotos</a>
+                                                                </li>
+                                                        </div>
+                                                </div>
                                         </ul>
 
                                         <ul class="ulTour" data-aos="fade-up" data-aos-duration="2000">
@@ -184,7 +217,8 @@
                                                                 </li>
                                                         </div>
                                                         <figure>
-                                                                <img class="fotosTour" src="../assets/img/keane-tour-2019.jpg"
+                                                                <img class="fotosTour"
+                                                                        src="../assets/img/keane-tour-2019.jpg"
                                                                         alt="Foto del tour de Keane 2019 por Latinoamérica">
                                                         </figure>
 
