agregado de preg frecuentas

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,6 +61,7 @@
 
         <main>
             <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="sobre"></h1>
+
             <section class="contact-background">
                 <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
 
@@ -81,6 +82,43 @@
                     <button class="boton" type="submit">Enviar</button>
                 </form>
             </section>
+
+            <section>
+                <h3 data-aos="fade-up" data-aos-duration="2000">Preguntas frecuentes</h3>
+                <div data-aos="fade-up" data-aos-duration="2000" class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          ¿Pueden contratarnos para eventos?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Claro que sí. Para contrataciones dejanos un mensaje y te responderemos a la brevedad.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          ¿Qué hacer ante cancelaciones?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Verificar si no se reprogramó la fecha, sino se te reembolsará el total de la compra.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          ¿Realizan colaboraciones?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Sí, pasanos tus datos y nos pondremos en contacto.</div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+
         </main>
 
         <footer>
