--- a/pages/videos.html
+++ b/pages/videos.html
@@ -134,6 +134,39 @@
                     </div>
                 </article>
 
+                <article>
+                    <h3>Strangerland - 2012</h3>
+                    <div id="carouselExampleCaptions3" class="carousel slide">
+                        <div class="carousel-indicators indicadores">
+                            <button type="button" data-bs-target="#carouselExampleCaptions3" data-bs-slide-to="0"
+                                class="active" aria-current="true"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions3"
+                                data-bs-slide-to="1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions3"
+                                data-bs-slide-to="2"></button>
+                        </div>
+                        <div class="carousel-inner musicItem">
+                            <div class="carousel-item active">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/LUMmVjhj" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/81luu32j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-item">
+                                <iframe class="videoEdit" src="https://mover.uz/video/embed/PncuW32j" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev arrow" type="button"
+                            data-bs-target="#carouselExampleCaptions3" data-bs-slide="prev">
+                            < </button>
+                                <button class="carousel-control-next arrow" type="button"
+                                    data-bs-target="#carouselExampleCaptions3" data-bs-slide="next"> > </button>
+                    </div>
+                </article>
+
             </section>
         </main>
 
