SEO optimizado los alts

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
 <body>
     <div class="containerTemplate">
+
         <header>
             <nav class="navbar navbar-expand-md ">
                 <div class="container">
-                    <a href="./index.html"><img src="./assets/icons/logoKeane.svg" alt="Logo"
+                    <a href="./index.html"><img src="./assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
                             class="logo animate__animated animate__heartBeat"></a>
                     <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -57,11 +58,12 @@
                     </div>
                 </div>
             </nav>
-            <img class="fotosDeFondo" src="./assets/img/fondoHeader.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="./assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
         </header>
 
         <main>
-            <h1>¡¡BIENVENIDOS!! <img class="mano" src="./assets/img/mano.svg" alt="mano"></h1>
+            <h1>¡¡BIENVENIDOS!! <img class="mano" src="./assets/img/mano.svg"
+                    alt="Dibujo de una mano moviéndose en vaiven saludando"></h1>
             <section class="bioContainer">
                 <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
 
@@ -80,13 +82,13 @@
                             cerca de 10 millones de discos vendidos en total.</p>
                     </div>
                     <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda" id="foto1">
+                        <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda Keane en sus inicios siendo 3 integrantes, Richard, Tim y Tom">
                     </figure>
                 </article>
 
                 <article class="articulos articulo2" data-aos="fade-left" data-aos-duration="2000">
                     <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keaneBanda.png" alt="Foto de la banda" id="foto2">
+                        <img class="fotosBio" src="./assets/img/keaneBanda.png" alt="Foto de la banda Keane sumando a Jessy Quinn">
                     </figure>
                     <div class="art">
                         <h3>Primeros años (1995-1999)</h3>
@@ -118,13 +120,13 @@
                                 Door".</span></p>
                     </div>
                     <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/scott.png" alt="Foto de la banda con Scott" id="foto1">
+                        <img class="fotosBio" src="./assets/img/scott.png" alt="Foto de la banda Keane con Scott y Tom Chaplin">
                     </figure>
                 </article>
 
                 <article class="articulos articulo4" data-aos="fade-left" data-aos-duration="2000">
                     <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda" id="foto2">
+                        <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda Keane en la actualidad">
                     </figure>
                     <div class="art">
                         <h3>REENCUENTRO</h3>
@@ -156,7 +158,7 @@
                     src="./assets/icons/instagram.png" alt="Icono Instagram"></a>
             <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="./assets/icons/twitter.png"
                     alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="./assets/img/fondoFooter.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="./assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
     </div>
     <!-- Bootstrap -->
