--- a/pages/music.html
+++ b/pages/music.html
@@ -20,6 +20,7 @@
 
 <body>
     <div class="containerTemplate">
+
         <header>
             <nav class="navbar navbar-expand-md ">
                 <div class="container">
@@ -60,7 +61,7 @@
         </header>
 
         <main>
-            <h1>MUSIC <img class="vinilo" src="../assets/img/vinilo.png" alt="Vinilo"></h1>
+            <h1>MUSIC <img class="vinilo" src="../assets/img/vinilo.png" alt="Dibujo de vinilo, disco girando"></h1>
             <section>
                 <h2>Canciones ordenadas por álbum y año de lanzamiento</h2>
 
@@ -106,7 +107,6 @@
                     </div>
                 </article>
 
-
                 <article data-aos="fade-up" data-aos-duration="2000">
                     <h3>Under The Iron Sea - 2006</h3>
                     <div id="carouselExampleCaptions2" class="carousel slide">
@@ -148,7 +148,6 @@
                                     data-bs-target="#carouselExampleCaptions2" data-bs-slide="next"> > </button>
                     </div>
                 </article>
-
 
                 <article data-aos="fade-up" data-aos-duration="2000">
                     <h3>Perfect Symmetry - 2008</h3>
@@ -194,7 +193,6 @@
                     </div>
                 </article>
 
-
                 <article data-aos="fade-up" data-aos-duration="2000">
                     <h3>Night Train - 2010</h3>
                     <div id="carouselExampleCaptions4" class="carousel slide">
@@ -239,7 +237,6 @@
                     </div>
                 </article>
 
-
                 <article data-aos="fade-up" data-aos-duration="2000">
                     <h3>Strangeland - 2012</h3>
                     <div id="carouselExampleCaptions5" class="carousel slide">
@@ -275,7 +272,6 @@
                                     loading="lazy"></iframe>
                             </div>
                         </div>
-
                         <button class="carousel-control-prev arrow" type="button"
                             data-bs-target="#carouselExampleCaptions5" data-bs-slide="prev">
                             < </button>
@@ -283,7 +279,6 @@
                                     data-bs-target="#carouselExampleCaptions5" data-bs-slide="next"> > </button>
                     </div>
                 </article>
-
 
                 <article data-aos="fade-up" data-aos-duration="2000">
                     <h3>Cause and Effect - 2019</h3>
@@ -320,7 +315,6 @@
                                     loading="lazy"></iframe>
                             </div>
                         </div>
-
                         <button class="carousel-control-prev arrow" type="button"
                             data-bs-target="#carouselExampleCaptions6" data-bs-slide="prev">
                             < </button>
@@ -343,7 +337,7 @@
                     src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
             <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                     alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
 
     </div>
