--- a/pages/tour.html
+++ b/pages/tour.html
@@ -26,7 +26,7 @@
                         <nav class="navbar navbar-expand-md ">
                                 <div class="container">
 
-                                        <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                                        <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo de Keane"
                                                         class="logo animate__animated animate__heartBeat"></a>
 
                                         <button class="navbar-toggler hamburguesaBoton" type="button"
@@ -62,11 +62,11 @@
                                         </div>
                                 </div>
                         </nav>
-                        <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
+                        <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
                 </header>
 
                 <main>
-                        <h1>TOUR <img class="microfono" src="../assets/img/micro.png" alt="micro"></h1>
+                        <h1>TOUR <img class="microfono" src="../assets/img/micro.png" alt="Dibujo de micrófono moviéndose en vaiven"></h1>
                         <section class="tour-background">
 
                                 <article class="tour" data-aos="fade-up" data-aos-duration="2000">
@@ -239,7 +239,7 @@
                                         src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
                         <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                                         alt="Icono X - Twitter"></a>
-                        <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+                        <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
                 </footer>
 
         </div>
