--- a/pages/videos.html
+++ b/pages/videos.html
@@ -25,7 +25,7 @@
         <header>
             <nav class="navbar navbar-expand-md ">
                 <div class="container">
-                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo de Keane"
                             class="logo animate__animated animate__heartBeat"></a>
                     <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -58,14 +58,14 @@
                     </div>
                 </div>
             </nav>
-            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
         </header>
 
         <main>
-            <h1>VIDEOS <img class="vhs" src="../assets/img/vhs.png" alt="vhs"></h1>
+            <h1>VIDEOS <img class="vhs" src="../assets/img/vhs.png"
+                    alt="Dibujo de un vhs, cassette de videos moviendose en vaiven"></h1>
             <section>
                 <h2>VideoClips ordenados por álbum y año de lanzamiento</h2>
-
 
                 <article>
                     <h3>Hopes & Fears - 2004</h3>
@@ -181,7 +181,7 @@
                     src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
             <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                     alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
 
     </div>
