--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,10 +20,11 @@
 
 <body>
     <div class="containerTemplate">
+      
         <header>
             <nav class="navbar navbar-expand-md ">
                 <div class="container">
-                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo"
+                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
                             class="logo animate__animated animate__heartBeat"></a>
                     <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -56,11 +57,11 @@
                     </div>
                 </div>
             </nav>
-            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
         </header>
 
         <main>
-            <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="sobre"></h1>
+            <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="Dibujo de sobre carta"></h1>
 
             <section class="contact-background">
                 <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
@@ -132,7 +133,7 @@
                     src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
             <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
                     alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo">
+            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
 
     </div>
