--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <title>KEANE</title>
 </head>
 
-<body>
-    <div class="containerTemplate">
+<body class="containerTemplate">
 
-        <header>
+    <header>
             <nav class="navbar navbar-expand-md ">
                 <div class="container">
                     <a href="./index.html"><img src="./assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
@@ -160,7 +159,7 @@
                     alt="Icono X - Twitter"></a>
             <img class="fotosDeFondo" src="./assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
-    </div>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
