--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,8 +18,7 @@
     <title>KEANE</title>
 </head>
 
-<body>
-    <div class="containerTemplate">
+<body class="containerTemplate">
       
         <header>
             <nav class="navbar navbar-expand-md ">
@@ -136,7 +135,6 @@
             <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
 
-    </div>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
