--- a/pages/music.html
+++ b/pages/music.html
@@ -18,8 +18,7 @@
     <title>KEANE</title>
 </head>
 
-<body>
-    <div class="containerTemplate">
+<body class="containerTemplate">
 
         <header>
             <nav class="navbar navbar-expand-md ">
@@ -339,8 +338,6 @@
                     alt="Icono X - Twitter"></a>
             <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
         </footer>
-
-    </div>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
