--- a/pages/tour.html
+++ b/pages/tour.html
@@ -19,8 +19,7 @@
         <title>KEANE</title>
 </head>
 
-<body>
-        <div class="containerTemplate">
+<body class="containerTemplate">
 
                 <header>
                         <nav class="navbar navbar-expand-md ">
@@ -241,8 +240,6 @@
                                         alt="Icono X - Twitter"></a>
                         <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
                 </footer>
-
-        </div>
 
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
