edit nombre de fotos

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -65,7 +65,7 @@
                 </header>
 
                 <main>
-                        <h1>TOUR <img class="microfono" src="../assets/img/micro.png" alt="Dibujo de micrófono moviéndose en vaiven"></h1>
+                        <h1>TOUR <img class="microfono" src="../assets/img/microfono.png" alt="Dibujo de micrófono moviéndose en vaiven"></h1>
                         <section class="tour-background">
 
                                 <article class="tour" data-aos="fade-up" data-aos-duration="2000">
