--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Keane, banda, rock alternativo, música, historia, biografía, discografía, videos, tour, contacto, britishpop, britpop, pop, rock, gira">
+    <meta name="description"
+        content="Página web dedicada a la banda Keane, su historia, videos, música, tours y su discografía.">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,150 +20,155 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <!-- Favicon -->
     <link rel="icon" href="./assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
-    <title>KEANE</title>
+    <title>KEANE - HOME</title>
 </head>
 
 <body class="containerTemplate">
 
     <header>
-            <nav class="navbar navbar-expand-md ">
-                <div class="container">
-                    <a href="./index.html"><img src="./assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
-                            class="logo animate__animated animate__heartBeat"></a>
-                    <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+        <nav class="navbar navbar-expand-md ">
+            <div class="container">
+                <a href="./index.html"><img src="./assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
+                        class="logo animate__animated animate__heartBeat"></a>
+                <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
+                <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                        <ul class="navbar-nav mb-2 mb-lg-2">
+                    <ul class="navbar-nav mb-2 mb-lg-2">
 
 
-                            <li class="listaNavbar">
-                                <a class="botonNavBar active" aria-current="page" href="./index.html">HOME</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./pages/tour.html">TOUR</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./pages/videos.html">VIDEOS</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./pages/music.html">MUSIC</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./pages/contact.html">CONTACT</a>
-                            </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar active" aria-current="page" href="./index.html">HOME</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./pages/tour.html">TOUR</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./pages/videos.html">VIDEOS</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./pages/music.html">MUSIC</a>
+                        </li>
+                        <li class="listaNavbar">
+                            <a class="botonNavBar" href="./pages/contact.html">CONTACT</a>
+                        </li>
 
-                        </ul>
+                    </ul>
 
-                    </div>
                 </div>
-            </nav>
-            <img class="fotosDeFondo" src="./assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
-        </header>
+            </div>
+        </nav>
+        <img class="fotosDeFondo" src="./assets/img/fondoHeader.png"
+            alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
+    </header>
 
-        <main>
-            <h1>¡¡BIENVENIDOS!! <img class="mano" src="./assets/img/mano.svg"
-                    alt="Dibujo de una mano moviéndose en vaiven saludando"></h1>
-            <section class="bioContainer">
-                <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
+    <main>
+        <h1>¡¡BIENVENIDOS!! <img class="mano" src="./assets/img/mano.svg"
+                alt="Dibujo de una mano moviéndose en vaiven saludando"></h1>
+        <section class="bioContainer">
+            <h2 class="bioTitulo">BREVE BIOGRAFÍA E HISTORIA DE LA BANDA</h2>
 
-                <article class="articulos articulo1" data-aos="fade-right" data-aos-duration="2000">
-                    <div class="art">
-                        <h3>COMIENZOS</h3>
-                        <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
-                            Sussex,
-                            en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes
-                                and
-                                Fears</span> (2004), <span class="discos">Under the Iron Sea</span> (2006), <span
-                                class="discos">Perfect Symmetry</span> (2008), <span class="discos">Strangeland</span>
-                            (2012) fueron directos al número 1 de la
-                            lista británica de ventas UK Albums Chart. Inmediatamente después de su lanzamiento
-                            consiguiendo
-                            cerca de 10 millones de discos vendidos en total.</p>
-                    </div>
-                    <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keane.jpg" alt="Foto de la banda Keane en sus inicios siendo 3 integrantes, Richard, Tim y Tom">
-                    </figure>
-                </article>
+            <article class="articulos articulo1" data-aos="fade-right" data-aos-duration="2000">
+                <div class="art">
+                    <h3>COMIENZOS</h3>
+                    <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
+                        Sussex,
+                        en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes
+                            and
+                            Fears</span> (2004), <span class="discos">Under the Iron Sea</span> (2006), <span
+                            class="discos">Perfect Symmetry</span> (2008), <span class="discos">Strangeland</span>
+                        (2012) fueron directos al número 1 de la
+                        lista británica de ventas UK Albums Chart. Inmediatamente después de su lanzamiento
+                        consiguiendo
+                        cerca de 10 millones de discos vendidos en total.</p>
+                </div>
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keaneBanda-1.jpg"
+                        alt="Foto de la banda Keane en sus inicios siendo 3 integrantes, Richard, Tim y Tom">
+                </figure>
+            </article>
 
-                <article class="articulos articulo2" data-aos="fade-left" data-aos-duration="2000">
-                    <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keaneBanda.png" alt="Foto de la banda Keane sumando a Jessy Quinn">
-                    </figure>
-                    <div class="art">
-                        <h3>Primeros años (1995-1999)</h3>
-                        <p>El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la
-                            escuela
-                            secundaria en Tonbridge. Pero recién estudiando la carrera de Humanidades en la University
-                            College London en 1995, Rice-Oxley formó un grupo de rock con su amigo Dominic Scott e
-                            invitaron
-                            a Richard a tocar la batería. Comenzaron como una banda de covers, tocando canciones de sus
-                            artistas favoritos, incluyendo U2, Oasis y The Beatles, ensayando en sus casas.</p>
-                    </div>
-                </article>
+            <article class="articulos articulo2" data-aos="fade-left" data-aos-duration="2000">
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keaneBanda-2.png"
+                        alt="Foto de la banda Keane sumando a Jessy Quinn">
+                </figure>
+                <div class="art">
+                    <h3>Primeros años (1995-1999)</h3>
+                    <p>El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la
+                        escuela
+                        secundaria en Tonbridge. Pero recién estudiando la carrera de Humanidades en la University
+                        College London en 1995, Rice-Oxley formó un grupo de rock con su amigo Dominic Scott e
+                        invitaron
+                        a Richard a tocar la batería. Comenzaron como una banda de covers, tocando canciones de sus
+                        artistas favoritos, incluyendo U2, Oasis y The Beatles, ensayando en sus casas.</p>
+                </div>
+            </article>
 
-                <article class="articulos articulo3" data-aos="fade-right" data-aos-duration="2000">
-                    <div class="art">
-                        <h3>Se une Tom, se va Scott</h3>
-                        <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de
-                            Tom a
-                            la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor
-                            a
-                            una amiga de la madre de Tom, a quien Tim y Tom conocieron de pequeños y quien fue una gran
-                            influencia en sus vidas. El nombre fue acortado a "Keane" pronto. En 1999 y sin un contrato
-                            discográfico, grabaron su primer sencillo, <span class="discos">"Call Me What You
-                                Like"</span>.
-                            Debido al limitado éxito que estaban teniendo, Scott decidió abandonar el grupo un mes
-                            después
-                            de que su segundo sencillo fuera lanzado en febrero del 2001, <span class="discos">"Wolf At
-                                The
-                                Door".</span></p>
-                    </div>
-                    <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/scott.png" alt="Foto de la banda Keane con Scott y Tom Chaplin">
-                    </figure>
-                </article>
+            <article class="articulos articulo3" data-aos="fade-right" data-aos-duration="2000">
+                <div class="art">
+                    <h3>Se une Tom, se va Scott</h3>
+                    <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de
+                        Tom a
+                        la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor
+                        a
+                        una amiga de la madre de Tom, a quien Tim y Tom conocieron de pequeños y quien fue una gran
+                        influencia en sus vidas. El nombre fue acortado a "Keane" pronto. En 1999 y sin un contrato
+                        discográfico, grabaron su primer sencillo, <span class="discos">"Call Me What You
+                            Like"</span>.
+                        Debido al limitado éxito que estaban teniendo, Scott decidió abandonar el grupo un mes
+                        después
+                        de que su segundo sencillo fuera lanzado en febrero del 2001, <span class="discos">"Wolf At
+                            The
+                            Door".</span></p>
+                </div>
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keaneBandaConScott.png"
+                        alt="Foto de la banda Keane con Scott y Tom Chaplin">
+                </figure>
+            </article>
 
-                <article class="articulos articulo4" data-aos="fade-left" data-aos-duration="2000">
-                    <figure class="pictureBio">
-                        <img class="fotosBio" src="./assets/img/keane1.jpg" alt="Foto de la banda Keane en la actualidad">
-                    </figure>
-                    <div class="art">
-                        <h3>REENCUENTRO</h3>
-                        <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
-                            de 2019, un artículo del periódico "The Sun" reveló que la banda está planeando "regresar
-                            después de
-                            seis años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda
-                            está
-                            lista para trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de
-                            2019, se
-                            reveló que el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana
-                            después, el
-                            6 de junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".
-                        </p>
-                    </div>
-                </article>
+            <article class="articulos articulo4" data-aos="fade-left" data-aos-duration="2000">
+                <figure class="pictureBio">
+                    <img class="fotosBio" src="./assets/img/keaneBandaConJessy.jpg" alt="Foto de la banda Keane en la actualidad">
+                </figure>
+                <div class="art">
+                    <h3>REENCUENTRO</h3>
+                    <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
+                        de 2019, un artículo del periódico "The Sun" reveló que la banda está planeando "regresar
+                        después de
+                        seis años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda
+                        está
+                        lista para trabajar de nuevo después de "poner sus diferencias a un lado". El 30 de mayo de
+                        2019, se
+                        reveló que el nuevo álbum se llama <span class="discos">Cause and Effect</span>. Una semana
+                        después, el
+                        6 de junio de 2019, la banda lanzó el primer sencillo del álbum, titulado "The Way I Feel".
+                    </p>
+                </div>
+            </article>
 
-            </section>
-        </main>
+        </section>
+    </main>
 
-        <footer>
-            <p>Todos los derechos reservados a Keane© 2025</p>
-            <p>Diseño Web por Tam S. C.</p>
-            <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
-                    src="./assets/icons/youtube.png" alt="Icono Youtube"></a>
-            <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
-                    src="./assets/icons/spotify.png" alt="Icono Spotify"></a>
-            <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes"
-                    src="./assets/icons/instagram.png" alt="Icono Instagram"></a>
-            <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="./assets/icons/twitter.png"
-                    alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="./assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
-        </footer>
+    <footer>
+        <p>Todos los derechos reservados a Keane© 2025</p>
+        <p>Diseño Web por Tam S. C.</p>
+        <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
+                src="./assets/icons/youtube.png" alt="Icono Youtube"></a>
+        <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
+                src="./assets/icons/spotify.png" alt="Icono Spotify"></a>
+        <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes" src="./assets/icons/instagram.png"
+                alt="Icono Instagram"></a>
+        <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="./assets/icons/twitter.png"
+                alt="Icono X - Twitter"></a>
+        <img class="fotosDeFondo" src="./assets/img/fondoFooter.png"
+            alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
+    </footer>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
