etiquetas meta, titulos

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
             <article class="articulos articulo4" data-aos="fade-left" data-aos-duration="2000">
                 <figure class="pictureBio">
-                    <img class="fotosBio" src="./assets/img/keaneBandaConJessy.jpg" alt="Foto de la banda Keane en la actualidad">
+                    <img class="fotosBio" src="./assets/img/keaneBandaConJessy.jpg"
+                        alt="Foto de la banda Keane en la actualidad">
                 </figure>
                 <div class="art">
                     <h3>REENCUENTRO</h3>
