--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,149 +2,162 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- CSS Styles -->
-    <link rel="stylesheet" href="../styles/styles.css">
-    <!-- Favicon -->
-    <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
-    <title>KEANE</title>
+  <!-- ETIQUETAS META -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Keane, banda, contacto, britishpop, britpop, pop, rock">
+  <meta name="description"
+    content="Página web dedicada a la banda Keane. Aquí podrás encontrar información sobre el contacto con la banda.">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- CSS Styles -->
+  <link rel="stylesheet" href="../styles/styles.css">
+  <!-- Favicon -->
+  <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
+  <title>KEANE - CONTACTO</title>
 </head>
 
 <body class="containerTemplate">
-      
-        <header>
-            <nav class="navbar navbar-expand-md ">
-                <div class="container">
-                    <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
-                            class="logo animate__animated animate__heartBeat"></a>
-                    <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
 
-                    <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
+  <header>
+    <nav class="navbar navbar-expand-md ">
+      <div class="container">
+        <a href="../index.html"><img src="../assets/icons/logoKeane.svg" alt="Logo de la banda Keane"
+            class="logo animate__animated animate__heartBeat"></a>
+        <button class="navbar-toggler hamburguesaBoton" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-                        <ul class="navbar-nav mb-2 mb-lg-2">
+        <div class="collapse navbar-collapse listContainer" id="navbarTogglerDemo01">
 
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="../index.html">HOME</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./tour.html">TOUR</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./videos.html">VIDEOS</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar" href="./music.html">MUSIC</a>
-                            </li>
-                            <li class="listaNavbar">
-                                <a class="botonNavBar active" aria-current="page" href="./contact.html">CONTACT</a>
-                            </li>
+          <ul class="navbar-nav mb-2 mb-lg-2">
 
-                        </ul>
+            <li class="listaNavbar">
+              <a class="botonNavBar" href="../index.html">HOME</a>
+            </li>
+            <li class="listaNavbar">
+              <a class="botonNavBar" href="./tour.html">TOUR</a>
+            </li>
+            <li class="listaNavbar">
+              <a class="botonNavBar" href="./videos.html">VIDEOS</a>
+            </li>
+            <li class="listaNavbar">
+              <a class="botonNavBar" href="./music.html">MUSIC</a>
+            </li>
+            <li class="listaNavbar">
+              <a class="botonNavBar active" aria-current="page" href="./contact.html">CONTACT</a>
+            </li>
 
-                    </div>
-                </div>
-            </nav>
-            <img class="fotosDeFondo" src="../assets/img/fondoHeader.png" alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
-        </header>
+          </ul>
 
-        <main>
-            <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="Dibujo de sobre carta"></h1>
+        </div>
+      </div>
+    </nav>
+    <img class="fotosDeFondo" src="../assets/img/fondoHeader.png"
+      alt="Foto de fondo del header de olas basado en el arte del disco Under the Iron Sea">
+  </header>
 
-            <section class="contact-background">
-                <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
+  <main>
+    <h1>CONTACT <img class="sobre" src="../assets/img/correo.png" alt="Dibujo de sobre carta"></h1>
 
-                <form action="/submit" method="post" data-aos="fade-up" data-aos-duration="2000">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
+    <section class="contact-background">
+      <h3>Dejanos tu consulta <br> y responderemos <br>a la brevedad.</h3>
 
-                    <label for="nombre">Apellido</label>
-                    <input type="text" id="apellido" name="apellido" placeholder="Escribe aquí tu apellido" required>
+      <form action="/submit" method="post" data-aos="fade-up" data-aos-duration="2000">
+        <label for="nombre">Nombre</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre" required>
 
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
+        <label for="nombre">Apellido</label>
+        <input type="text" id="apellido" name="apellido" placeholder="Escribe aquí tu apellido" required>
 
-                    <label for="mensaje">Mensaje</label>
-                    <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje"
-                        required></textarea>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Dejanos tu email aquí" required>
 
-                    <button class="boton" type="submit">Enviar</button>
-                </form>
-            </section>
+        <label for="mensaje">Mensaje</label>
+        <textarea id="mensaje" name="mensaje" witdh="30%" placeholder="Escribe aquí tu mensaje" required></textarea>
 
-            <section>
-                <h3 data-aos="fade-up" data-aos-duration="2000">Preguntas frecuentes</h3>
-                <div data-aos="fade-up" data-aos-duration="2000" class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                          ¿Pueden contratarnos para eventos?
-                        </button>
-                      </h2>
-                      <div id="flush-collapseOne" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Claro que sí. Para contrataciones dejanos un mensaje y te responderemos a la brevedad.</div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                          ¿Qué hacer ante cancelaciones?
-                        </button>
-                      </h2>
-                      <div id="flush-collapseTwo" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Verificar si no se reprogramó la fecha, sino se te reembolsará el total de la compra.</div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                          ¿Realizan colaboraciones?
-                        </button>
-                      </h2>
-                      <div id="flush-collapseThree" class="accordion-collapse collapse respuesta" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Sí, pasanos tus datos y nos pondremos en contacto.</div>
-                      </div>
-                    </div>
-                  </div>
-            </section>
+        <button class="boton" type="submit">Enviar</button>
+      </form>
+    </section>
 
-        </main>
+    <section>
+      <h3 data-aos="fade-up" data-aos-duration="2000">Preguntas frecuentes</h3>
+      <div data-aos="fade-up" data-aos-duration="2000" class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              ¿Pueden contratarnos para eventos?
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse respuesta"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Claro que sí. Para contrataciones dejanos un mensaje y te responderemos a la
+              brevedad.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              ¿Qué hacer ante cancelaciones?
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse respuesta"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Verificar si no se reprogramó la fecha, sino se te reembolsará el total de la
+              compra.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed acordeonStyle" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              ¿Realizan colaboraciones?
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse respuesta"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Sí, pasanos tus datos y nos pondremos en contacto.</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        <footer>
-            <p>Todos los derechos reservados a Keane© 2025</p>
-            <p>Diseño Web por Tam S. C.</p>
-            <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
-                    src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
-            <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
-                    src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
-            <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes"
-                    src="../assets/icons/instagram.png" alt="Icono Instagram"></a>
-            <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
-                    alt="Icono X - Twitter"></a>
-            <img class="fotosDeFondo" src="../assets/img/fondoFooter.png" alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
-        </footer>
+  </main>
 
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+  <footer>
+    <p>Todos los derechos reservados a Keane© 2025</p>
+    <p>Diseño Web por Tam S. C.</p>
+    <a href="https://youtube.com/@keaneofficial?si=K5jPArEjX-cCdZUh"><img class="iconosRedes"
+        src="../assets/icons/youtube.png" alt="Icono Youtube"></a>
+    <a href="https://open.spotify.com/user/keaneofficial?si=45e2b81b457e4266"><img class="iconosRedes"
+        src="../assets/icons/spotify.png" alt="Icono Spotify"></a>
+    <a href="https://www.instagram.com/keaneofficial/"><img class="iconosRedes" src="../assets/icons/instagram.png"
+        alt="Icono Instagram"></a>
+    <a href="https://x.com/keaneofficial"><img class="iconosRedes" src="../assets/icons/twitter.png"
+        alt="Icono X - Twitter"></a>
+    <img class="fotosDeFondo" src="../assets/img/fondoFooter.png"
+      alt="Foto de fondo del footer de olas basado en el arte del disco Under the Iron Sea">
+  </footer>
 
-    <!-- AOS -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+  <!-- AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
