--- a/pages/videos.html
+++ b/pages/videos.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Keane, banda, rock alternativo, música, videos, britishpop, britpop, pop, rock">
+    <meta name="description"
+        content="Página web dedicada a la banda Keane. Aquí podrás encontrar sus videos separados por álbumes y años de lanzamiento.">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,7 +20,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <!-- Favicon -->
     <link rel="icon" href="../assets/icons/musica.png" type="image/x-icon" alt="favicon nota musical">
-    <title>KEANE</title>
+    <title>KEANE - VIDEOS</title>
 </head>
 
 <body class="containerTemplate">
