--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <article class="articulos articulo1" data-aos="fade-right" data-aos-duration="2000">
                 <div class="art">
                     <h3>COMIENZOS</h3>
-                    <p>Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
+                    <p class="pBio">Keane es una banda inglesa de rock alternativo, formada en 1995, procedente de Battle, East
                         Sussex,
                         en el sureste de Inglaterra. Sus primeros 4 álbumes en estudio, <span class="discos">Hopes
                             and
@@ -99,7 +99,7 @@
                 </figure>
                 <div class="art">
                     <h3>Primeros años (1995-1999)</h3>
-                    <p>El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la
+                    <p class="pBio">El deseo de formar un grupo apareció cuando Rice-Oxley aún se encontraba estudiando la
                         escuela
                         secundaria en Tonbridge. Pero recién estudiando la carrera de Humanidades en la University
                         College London en 1995, Rice-Oxley formó un grupo de rock con su amigo Dominic Scott e
@@ -112,7 +112,7 @@
             <article class="articulos articulo3" data-aos="fade-right" data-aos-duration="2000">
                 <div class="art">
                     <h3>Se une Tom, se va Scott</h3>
-                    <p>Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de
+                    <p class="pBio">Chaplin se unió al grupo en 1997 y se encargó de la voz y la guitarra acústica. La unión de
                         Tom a
                         la banda también marcó un cambio de nombre, de "The Lotus Eaters" a "Cherry Keane", en honor
                         a
@@ -139,7 +139,7 @@
                 </figure>
                 <div class="art">
                     <h3>REENCUENTRO</h3>
-                    <p>Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
+                    <p class="pBio">Estuvieron separados de manera temporal desde 2014 hasta enero de 2019. Pero el 17 de enero
                         de 2019, un artículo del periódico "The Sun" reveló que la banda está planeando "regresar
                         después de
                         seis años de distancia" y que "una fuente cercana a los rockeros ha revelado que la banda
